# Job-Easy

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  test_tailoring_manual.py
.claude/: settings.json
artifacts/: jd.json
conductor/: product-guidelines.md  product.md  research.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: general.md  python.md
conductor/tracks/llm_scoring_eval_20260122_232717/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/runner_yolo_20260122_015613/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/track_20260115_032209/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/track_20260115_034749/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/track_20260115_044908/: index.md  metadata.json  plan.md  spec.md
docs/: autonomous.md  config.md  dev.md  epics-stories.md  extractor.md  hitl.md  progress-tracker.yaml  project-brief.md  runner-manual-test.md  runner.md  scoring.md  sprint-status.yaml  tailoring.md  tracker.md  utils.md  workflow-diagram.md
profiles/: .gitkeep  browser-use-user-data-dir-chrome  profile.example.yaml
scripts/: cleanup_browser_use_temp_dirs.py  test_extractor.py
src/: __init__.py  __main__.py
src/autonomous/: __init__.py  leads.py  models.py  queue.py  runner.py  service.py
src/config/: __init__.py  settings.py
src/extractor/: __init__.py  agent.py  config.py  models.py  service.py
src/hitl/: __init__.py  tools.py
src/runner/: __init__.py  agent.py  domains.py  models.py  qa_bank.py  service.py  yolo.py
src/scoring/: __init__.py  config.py  evaluation.py  llm.py  matchers.py  models.py  profile.py  prompts.py  service.py
src/tailoring/: __init__.py  config.py  cover_letter.py  llm.py  models.py  plan.py  renderer.py  resume.py  review.py  service.py
src/tracker/: __init__.py  fingerprint.py  models.py  repository.py  service.py
src/utils/: logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_autonomous.py
tests/unit/: __init__.py  test_cli.py
(+81 files in other folders)
